--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "js-srve3n",
-  "version": "0.0.0",
+  "name": "pizza-calc",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "bootstrap": "^4.5.0",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.0"
-  }
+  "description": "A playful, modern pizza dough calculator (no dependencies)",
+  "scripts": {
+    "dev": "bun server.js",
+    "build": "bun scripts/build.mjs",
+    "prod": "bun scripts/prod.mjs"
+  },
+  "dependencies": {}
 }
