Add Prometheus metrics endpoint and instrumentation
Introduces a /metrics endpoint using prom-client, configurable via METRICS_ENABLED. All HTTP requests are instrumented for request count and duration, with default and custom labels. Updates Dockerfile for better layer caching and adds prom-client dependency.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
     "build": "bun scripts/build.mjs",
     "prod": "bun scripts/prod.mjs"
   },
-  "dependencies": {}
+  "dependencies": {
+    "prom-client": "^15.1.3"
+  }
 }
